# MAIIA

./: .dask_config.yaml  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  config.yml  docker-compose.yml  pyproject.toml  setup.py  start  start_jupyter
MODELS/: .gitignore
data/: .gitignore
data/local/: orthos.db
data/models/: readme.md
data/predict/: readme.md
data/results/: readme.md
data/train/: readme.md
docs/source/: conf.py  datasets.rst  getting_started.rst  gim_cv.interfaces.shp.rst  gim_cv.rst  gim_cv.scrapers.vl_orthos.rst  inference.rst  models.rst  preprocessing.rst
envs/: env-static.yml  gim_cv_gpu_env.yml
gim_cv/: __init__.py  callbacks.py  config.py  dask_tools.py  datasets.py  exceptions.py  inference.py  losses.py  metrics.py  orchestration.py  preprocessing.py  training.py  tuners.py  utils.py
gim_cv/interfaces/: __init__.py  base.py
gim_cv/models/: attention_unet.py  blocks.py  deepresunet.py  segmentalist.py
gim_cv/scrapers/: __init__.py  scrapy.cfg
gim_cv/tools/: create_clipped_input.py
maiia/: postprocess.py  utils.py
maiia/console/: predict.py  train.py
notebooks/: .gitignore  0_Test-GPU.ipynb  1_Entrenamiento.ipynb
notebooks/Portal/: Infer_train_cmd.ipynb  Infer_train_simple.ipynb  Infer_train_simple.py  Training_Inference_IDB_v11.ipynb  aoi_tools.py
references/: ALGORITHMS.md  REFS.md  SETUP.md
tests/: conftest.py
tests/unit/: test_callbacks.py  test_dask_tools.py  test_datasets.py  test_inference.py  test_interfaces.py  test_losses.py  test_models.py  test_orchestration.py  test_preprocessing.py  (+5 more)
(+33 files in other folders)
